<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_info"
        android:textColor="#01ccff"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/lbl_lastname"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="377dp"
        android:layout_height="39dp"
        android:layout_marginBottom="560dp"
        android:background="#e8e8e8"
        android:drawableStart="@drawable/ic_baseline_person_18"
        android:drawableLeft="@drawable/ic_baseline_person_18"
        android:ems="10"
        android:hint="@string/txt_lastname"
        android:textColorHint="#d3d3d3"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/lbl_firstname"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="377dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="#e8e8e8"
        android:drawableStart="@drawable/ic_baseline_person_18"
        android:drawableLeft="@drawable/ic_baseline_person_18"
        android:ems="10"
        android:hint="@string/txt_firstname"
        android:textColorHint="#d3d3d3"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />


    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/lbl_phone"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:background="#e8e8e8"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:ems="10"
        android:hint="@string/txt_phone"
        android:textColorHint="#d3d3d3"
        android:textColor="@color/black"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/lblAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/lbl_age"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="1.0" />
    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="377dp"
        android:layout_height="44dp"
        android:background="#e8e8e8"
        android:drawableStart="@drawable/ic_baseline_numbers_24"
        android:drawableLeft="@drawable/ic_baseline_numbers_24"
        android:ems="10"
        android:hint="@string/txt_age"
        android:textColorHint="#d3d3d3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.08" />
    <TextView
        android:id="@+id/lblDomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:text="@string/lbl_Domain"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDomain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge"
        app:layout_constraintVertical_bias="1.0" />
    <EditText
        android:id="@+id/editTextDomain"
        android:layout_width="377dp"
        android:layout_height="44dp"
        android:background="#e8e8e8"
        android:drawableStart="@drawable/ic_baseline_work_24"
        android:drawableLeft="@drawable/ic_baseline_work_24"
        android:ems="10"
        android:hint="@string/txt_Domain"
        android:textColorHint="#d3d3d3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge"
        app:layout_constraintVertical_bias="0.08" />





    <Button
        android:id="@+id/button"
        android:layout_width="387dp"
        android:layout_height="67dp"
        android:backgroundTint="#01ccff"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDomain"
        app:layout_constraintVertical_bias="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>